--- a/app/src/main/res/layout/activity_mating_2.xml
+++ b/app/src/main/res/layout/activity_mating_2.xml
@@ -52,8 +52,9 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:text="Nama Kucing"
-            android:textColor="@color/salem"
-            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/navy"
+            android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView16"
             app:layout_constraintStart_toEndOf="@+id/imageView16"
             app:layout_constraintTop_toTopOf="@+id/imageView16"
@@ -64,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Kelamin"
-            android:textColor="@color/salem"
+            android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView20"
             app:layout_constraintTop_toBottomOf="@+id/textView20" />
@@ -74,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Umur/Ras"
-            android:textColor="@color/salem"
+            android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView21"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -102,7 +103,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="Lokasi"
-            android:textColor="@color/salem"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,7 @@
             android:id="@+id/imageView17"
             android:layout_width="80dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_location"
+            android:src="@drawable/cat_location"
             app:layout_constraintEnd_toEndOf="@+id/textView22"
             app:layout_constraintStart_toStartOf="@+id/textView22"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
@@ -122,7 +123,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Lokasi Saya Sekarang"
-            android:textColor="@color/salem"
+            android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView17"
             app:layout_constraintStart_toEndOf="@+id/imageView17"
@@ -134,7 +135,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Rumah"
-            android:textColor="@color/salem"
+            android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView23"
             app:layout_constraintTop_toBottomOf="@+id/textView23" />
@@ -143,7 +144,7 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Tambah Lokasi Baru"
-            android:textColor="@color/salem"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/textView25"
@@ -171,7 +172,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Jarak Maksimum"
-            android:textColor="@color/salem"
+            android:textColor="@color/navy"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -238,7 +239,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginBottom="32dp"
                     android:text="Filter Menurut Ras"
-                    android:textColor="@color/salem"
+                    android:textColor="@color/navy"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
