--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,44 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_android_mobile___1"
+    android:background="@color/soft_guava"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="20dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
         android:text="Ubah Profile"
         android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
+        app:layout_constraintStart_toEndOf="@+id/imageView15"
+        app:layout_constraintTop_toTopOf="@+id/imageView15" />
+
+
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/photo_human"
+        app:civ_border_color="@color/gray"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+    <ImageView
+    android:id="@+id/add_photo"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_edit"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+        app:layout_constraintEnd_toEndOf="@+id/profile_image" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/menu_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.128"
+        app:layout_constraintTop_toBottomOf="@+id/profile_image"
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid"
-            style="@style/MyTextInputLayout"
+            style="@style/MyTextInputLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -54,18 +82,18 @@
 
             <com.google.android.material.textfield.TextInputEditText
 
-                android:drawableLeft="@drawable/ic_android_black_24dp"
-                android:drawablePadding="10dp"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nama"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:hint="Nama Pengguna"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid2"
-            style="@style/MyTextInputLayout"
+            style="@style/MyTextInputLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -74,18 +102,18 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:drawableLeft="@drawable/ic_android_black_24dp"
-                android:drawablePadding="10dp"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nama Pengguna"
+                android:drawableLeft="@drawable/ic_message"
+                android:drawablePadding="10dp"
+                android:hint="Email "
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid3"
-            style="@style/MyTextInputLayout"
+            style="@style/MyTextInputLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -94,18 +122,18 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid2">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:drawableLeft="@drawable/ic_android_black_24dp"
-                android:drawablePadding="10dp"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_location"
+                android:drawablePadding="10dp"
                 android:hint="Alamat"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid4"
-            style="@style/MyTextInputLayout"
+            style="@style/MyTextInputLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -114,49 +142,30 @@
             app:layout_constraintTop_toBottomOf="@+id/btnSolid3">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:drawableLeft="@drawable/ic_android_black_24dp"
-                android:drawablePadding="10dp"
                 style="@style/MyTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_hanger"
+                android:drawablePadding="10dp"
                 android:hint="Kata Sandi"
                 android:inputType="textPassword"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/btnSolid5"
-            style="@style/MyTextInputLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="@+id/btnSolid3"
-            app:layout_constraintStart_toStartOf="@+id/btnSolid4"
-            app:layout_constraintTop_toBottomOf="@+id/btnSolid4">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:drawableLeft="@drawable/ic_android_black_24dp"
-                android:drawablePadding="10dp"
-                style="@style/MyTextInputEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Ulangi Kata Sandi"
-                android:inputType="textPassword"
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <dita.shafira.mate.component.BtnSolid
             android:layout_width="0dp"
             android:layout_height="42dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="24dp"
-            android:text="Daftar"
+            android:text="Simpan Profile"
             android:textColor="@color/soft_guava"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid4"
-            app:layout_constraintStart_toStartOf="@+id/btnSolid5"
-            app:layout_constraintTop_toBottomOf="@+id/btnSolid5" />
+            app:layout_constraintStart_toStartOf="@+id/btnSolid4"
+            app:layout_constraintTop_toBottomOf="@+id/btnSolid4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
