--- a/app/src/main/res/layout/activity_mating_4.xml
+++ b/app/src/main/res/layout/activity_mating_4.xml
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="Judul Disini"
+        android:text="Kucing Saya"
         android:textColor="@color/navy"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -52,78 +52,82 @@
     <HorizontalScrollView
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/text_4">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/photo_2"
-            android:layout_width="99dp"
-            android:layout_height="139dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/photo_2"
+                android:layout_width="99dp"
+                android:layout_height="139dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:src="@color/salem" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:src="@color/salem" />
+            </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/photo_5"
-            android:layout_width="99dp"
-            android:layout_height="139dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/photo_5"
+                android:layout_width="99dp"
+                android:layout_height="139dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="12dp"
-                android:src="@color/salem" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="12dp"
+                    android:src="@color/salem" />
+            </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/photo_3"
-            android:layout_width="99dp"
-            android:layout_height="139dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/photo_3"
+                android:layout_width="99dp"
+                android:layout_height="139dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="12dp"
-                android:src="@color/salem" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="12dp"
+                    android:src="@color/salem" />
+            </androidx.cardview.widget.CardView>
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/photo_4"
-            android:layout_width="99dp"
-            android:layout_height="139dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/photo_4"
+                android:layout_width="99dp"
+                android:layout_height="139dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="12dp"
-                android:src="@color/salem" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="12dp"
+                    android:src="@color/salem" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -131,63 +135,197 @@
         android:id="@+id/text_1"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:text="Nama Kucing"
+        android:textAlignment="textStart"
         android:textColor="@color/navy"
-        android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <ImageView
+        android:id="@+id/imageView22"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:background="#FFFFFF"
+        android:src="@drawable/location_cat"
+        app:layout_constraintStart_toStartOf="@+id/text_1"
+        app:layout_constraintTop_toBottomOf="@+id/text_1" />
 
     <TextView
         android:id="@+id/text_2"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginTop="8dp"
-        android:text="Kelamin"
-        android:textAlignment="center"
+        android:layout_marginStart="8dp"
+        android:text="Lokasi"
+        android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/text_1"
-        app:layout_constraintTop_toBottomOf="@+id/text_1" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
+        app:layout_constraintEnd_toEndOf="@+id/text_1"
+        app:layout_constraintStart_toEndOf="@+id/imageView22"
+        app:layout_constraintTop_toTopOf="@+id/imageView22" />
+
+    <ImageView
+        android:id="@+id/imageView23"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_pawprint"
+        app:layout_constraintStart_toStartOf="@+id/imageView22"
+        app:layout_constraintTop_toBottomOf="@+id/imageView22" />
 
     <TextView
         android:id="@+id/text_3"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:text="Umur(thn)/Ras"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/text_2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_2" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
+        app:layout_constraintStart_toEndOf="@+id/imageView23"
+        app:layout_constraintTop_toTopOf="@+id/imageView23" />
+
+    <ImageView
+        android:id="@+id/imageView24"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/sex_1"
+        app:layout_constraintStart_toStartOf="@+id/imageView23"
+        app:layout_constraintTop_toBottomOf="@+id/imageView23" />
 
     <TextView
         android:id="@+id/text_4"
         android:layout_width="0dp"
         android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:text="Kelamin"
+        android:textAlignment="textStart"
+        android:textColor="@color/navy"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
+        app:layout_constraintStart_toEndOf="@+id/imageView24"
+        app:layout_constraintTop_toTopOf="@+id/imageView24" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_marginTop="8dp"
-        android:text="Status"
-        android:textAlignment="center"
+        android:background="@color/jeans"
+        android:outlineAmbientShadowColor="@color/gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_4" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/jeans"
+        android:outlineAmbientShadowColor="@color/gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/text_5"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="Vaksin"
+        android:textAlignment="textStart"
         android:textColor="@color/navy"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/text_3"
-        app:layout_constraintStart_toStartOf="@+id/text_3"
-        app:layout_constraintTop_toBottomOf="@+id/text_3" />
+        app:layout_constraintStart_toStartOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/calender_cat"
+        app:layout_constraintStart_toStartOf="@+id/text_5"
+        app:layout_constraintTop_toBottomOf="@+id/text_5" />
+
+    <TextView
+        android:id="@+id/text_6"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:text="11-11-2020"
+        android:textAlignment="textStart"
+        android:textColor="@color/navy"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
+        app:layout_constraintStart_toEndOf="@+id/imageView20"
+        app:layout_constraintTop_toTopOf="@+id/imageView20" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/jeans"
+        android:outlineAmbientShadowColor="@color/jeans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_6" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="Suntik Anti Parasit"
+        android:textAlignment="textStart"
+        android:textColor="@color/navy"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/divider3"
+        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/vaccine"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:text="11-11-2020"
+        android:textAlignment="textStart"
+        android:textColor="@color/navy"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
+        app:layout_constraintStart_toEndOf="@+id/imageView21"
+        app:layout_constraintTop_toTopOf="@+id/imageView21"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/btnOutline_1"
         android:layout_width="160dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_outline"
         android:foregroundGravity="center"
@@ -196,12 +334,12 @@
         android:text="Ubah"
         android:textColor="@color/navy"
         app:layout_constraintBottom_toTopOf="@+id/btnOutline_3"
-        app:layout_constraintStart_toStartOf="@+id/text_3">
+        app:layout_constraintStart_toStartOf="@+id/linearLayout">
 
         <ImageView
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:src="@drawable/btn_outline" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/edit_cat_bio_foreground" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -215,7 +353,6 @@
         android:id="@+id/btnOutline_2"
         android:layout_width="160dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/btn_outline"
         android:foregroundGravity="center"
         android:gravity="center"
@@ -223,12 +360,12 @@
         android:text="Hapus"
         android:textColor="@color/navy"
         app:layout_constraintBottom_toBottomOf="@+id/btnOutline_1"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout">
 
         <ImageView
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:src="@drawable/btn_outline" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/delete_account" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -243,12 +380,12 @@
         android:id="@+id/btnOutline_3"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:text="Kucing Disukai"
         android:textColor="@color/navy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnOutline_2"
         app:layout_constraintStart_toStartOf="@+id/btnOutline_1" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
