--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,12 +8,21 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/salem"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/imageView15"
         android:layout_width="20dp"
-        android:layout_height="70dp"
+        android:layout_height="55dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_back_white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,14 +33,12 @@
         android:layout_marginStart="16dp"
         android:text="Ubah Profile"
         android:textAlignment="textStart"
-        android:textColor="@color/navy"
-        android:textSize="30sp"
+        android:textColor="@color/soft_guava"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView15"
         app:layout_constraintStart_toEndOf="@+id/imageView15"
         app:layout_constraintTop_toTopOf="@+id/imageView15" />
-
-
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -44,7 +51,7 @@
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
     <ImageView
     android:id="@+id/add_photo"
         android:layout_width="50dp"
@@ -146,6 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_hanger"
+                android:drawableRight="@drawable/ic_visibility"
                 android:drawablePadding="10dp"
                 android:hint="Kata Sandi"
                 android:inputType="textPassword"
